<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:checkedButton="@id/gradient_yellow"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <RadioButton
            android:id="@+id/gradient_yellow"
            android:layout_width="@dimen/gradient_size"
            android:layout_height="@dimen/gradient_size"
            android:button="@android:color/transparent"
            android:background="@drawable/gradient_yellow" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <RadioButton
            android:id="@+id/gradient_red"
            android:layout_width="@dimen/gradient_size"
            android:layout_height="@dimen/gradient_size"
            android:button="@android:color/transparent"
            android:background="@drawable/gradient_red" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <RadioButton
            android:id="@+id/gradient_green"
            android:layout_width="@dimen/gradient_size"
            android:layout_height="@dimen/gradient_size"
            android:button="@android:color/transparent"
            android:background="@drawable/gradient_green" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <RadioButton
            android:id="@+id/gradient_blue"
            android:layout_width="@dimen/gradient_size"
            android:layout_height="@dimen/gradient_size"
            android:button="@android:color/transparent"
            android:background="@drawable/gradient_blue" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <RadioButton
            android:id="@+id/gradient_violet"
            android:layout_width="@dimen/gradient_size"
            android:layout_height="@dimen/gradient_size"
            android:button="@android:color/transparent"
            android:background="@drawable/gradient_violet" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/color_picker"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:gravity="top|start"
            android:minLines="3"
            android:maxLines="5"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/access_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@+id/button_private"
        app:layout_constraintTop_toBottomOf="@id/description_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/public_access"
            android:textColor="@color/selectable_text_color"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/private_access"
            android:textColor="@color/selectable_text_color"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
